# acompile

./: CMakeLists.txt  README.md
lex/: CMakeLists.txt  lex.c  main.c
lex/test/: CMakeLists.txt  test_lex.cpp
